add a version written by typescript

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   		<p>通关积分为<b><big>2048</b></big>，加油吧骚年~</p>
     </div>
 
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/main-use-ts-and-es6.js"></script>
 <!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script> -->
 </body>
 </html>
